hphp/hack/test/typecheck/async_hint3.php.exp
File "async_hint3.php", line 4, characters 30-40:
`async` functions must have an `Awaitable` return type. (Parsing[1002])
